# goit-pycore-final-project

./: .gitignore  MANIFEST.in  main.py  pyproject.toml  readme.md
contacts_bot/: AddressBook.py  Birthday.py  Name.py  Phone.py
src/: main.py
src/contactsbot/: Address.py  AddressBook.py  Birthday.py  Email.py  Field.py  Name.py  NoteRecord.py  NoteTag.py  NoteText.py  Notes.py  Phone.py  Record.py  __init__.py  __main__.py  bookOperations.py  commands.txt  decorators.py  helpers.py  notesOperations.py  stateManager.py
