[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contactsbot"
version = "0.1.0"
description = "A simple contact bot."
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = []
requires-python = ">=3.6"

[project.scripts]
contactsbot = "contactsbot.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]